// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListSeparator component renders properly 1`] = `
<div
  className="separator separator"
>
  <p
    className="separator-text separatorText"
  >
    Testing 123
  </p>
</div>
`;

exports[`ListSeparator component renders properly with classes 1`] = `
<div
  className="separator separator informative informative"
>
  <p
    className="separator-text separatorText informative informative"
  >
    Testing 123
  </p>
</div>
`;
